--- a/Kiba/Base.lproj/Main.storyboard
+++ b/Kiba/Base.lproj/Main.storyboard
@@ -263,6 +263,24 @@
             </objects>
             <point key="canvasLocation" x="1068" y="3782"/>
         </scene>
+        <!--Private Controller-->
+        <scene sceneID="G5q-b4-0SG">
+            <objects>
+                <viewController storyboardIdentifier="private" id="dgG-6f-3ue" customClass="KBAPrivateController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CRi-Ek-4s3"/>
+                        <viewControllerLayoutGuide type="bottom" id="8Zj-cs-YQx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qaf-Yt-6Ch">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O6R-Jn-bhP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1888" y="3782"/>
+        </scene>
         <!--Self Serv Contr-->
         <scene sceneID="fov-EU-bul">
             <objects>
